# xr_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  gdb_formatter.py
include/vr_engine/core/: engine.h  global.h  scene.h  vr_renderer.h  window.h
include/vr_engine/core/vr/: vr_renderer.h  vr_system.h
include/vr_engine/utils/: global_utils.h  io.h  openxr_utils.h  shared_pointer.h  vulkan_utils.h
include/vr_engine/utils/data/: hash_map.h  map.h  optional.h  storage.h
include/xr_engine/core/: engine.h  global.h  renderer.h  window.h  xr_renderer.h
include/xr_engine/core/xr/: xr_system.h
include/xr_engine/utils/: global_utils.h  openxr_utils.h
src/: main.cpp
src/core/: engine.cpp  global.cpp
src/core/renderer/: renderer_vulkan.cpp  scene_vulkan.cpp  vr_renderer_vulkan.cpp  xr_renderer_vulkan.cpp
src/core/vr/: vr_system.cpp
src/core/window/: window_sdl2.cpp
src/core/xr/: openxr.cpp  xr_system.cpp
src/utils/: global_utils.cpp  io.cpp  openxr_utils.cpp  shared_pointer.cpp  vulkan_utils.cpp
src/utils/data/: hash_map.cpp
tests/core/: main.cpp  window.cpp
tests/utils/: hash_map.cpp  map.cpp  optional.cpp  storage.cpp
